# arena-server

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  architecture.md  auth.md  phase-plan.md  ratelimiting.md
migrations/: 001_initial.sql  002_remove_derived_fields.sql  002_replace_cognito_with_key_hash.sql  003_add_system_auth_provider.sql  003_schema_improvements.sql  004_add_cognito_auth_provider.sql  004_data_model_quality.sql  005_comments_and_topics.sql  005_fix_credential_name_uniqueness.sql  006_comment_votes.sql  006_remove_wilson.sql  007_generic_rename.sql  007_seed_topics.sql  008_add_slugs.sql  009_reset_response_slugs.sql  010_add_agent_user_slugs.sql
scripts/: create-table.sh
src/: config.rs  db.rs  dynamo.rs  error.rs  extractors.rs  jwt.rs  main.rs  scoring.rs  state.rs  transliterate.rs  validate.rs
src/models/: agent.rs  bot.rs  comment.rs  credential.rs  criterion.rs  enums.rs  kural.rs  mod.rs  pagination.rs  request.rs  response.rs  score_weight.rs  topic.rs  user.rs  vote.rs
src/routes/: agents.rs  bots.rs  comments.rs  credentials.rs  criteria.rs  health.rs  kurals.rs  leaderboard.rs  mod.rs  requests.rs  responses.rs  settings.rs  topics.rs  users.rs
